# terminal-tasks

./: MANIFEST.in  README.md  app.py  core_logic.py  pyproject.toml  styles.tcss  task_manager_tui.py  tasks.json  textual-docs.txt
.ra-aid/: pk.db  pk.db-shm  pk.db-wal
src/terminal_tasks_app/: app.py  styles.tcss
src/terminal_tasks_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/terminal_tasks_app/docs/: DESIGN_DOCUMENT.md  shrimp-rules.md
terminal-taks-simple/: requirements.txt  setup.py  start.bat  styles.tcss  terminal-tasks.py
