[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terminal-tasks-app"
version = "0.1.0"
description = "A modern terminal-based task manager."
readme = "DESIGN_DOCUMENT.md"
requires-python = ">=3.8"
license = "MIT" # Placeholder, can be changed
authors = [
    {name = "Terminal Tasks Developer", email = "dev@example.com"} # Placeholder
]
dependencies = [
    "textual",
    "platformdirs" # Anticipating use for user-specific data (e.g. for tasks.json persistence)
]

[project.scripts]
terminal-tasks = "terminal_tasks_app.app:main" # Assumes app.py will have a main() function

[tool.setuptools]
packages = ["terminal_tasks_app"] # Explicitly list the package
package-dir = {"" = "src"}         # Specify that packages are under src/

[tool.setuptools.package-data]
terminal_tasks_app = [
    "*.tcss",
    "docs/*.md",
    "docs/*.json"
] # Include all .tcss files in the terminal_tasks_app package
